debezium/dbz#2537 Improve test stability
Signed-off-by: Fiore Mario Vitale <mvitale@redhat.com>